chore: change folders path

--- a/web/templates/desenho.html
+++ b/web/templates/desenho.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
   <head>
     <title>Desenha</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='desenho.css') }}">
-    <script type="text/javascript" src="{{ url_for('static', filename='desenho.js') }}"></script>
+    <link rel="stylesheet" type="text/css" href="/css/desenho.css">
+    <script type="text/javascript" src="/js/desenho.js"></script>
 
 </head>
 
