--- a/web/templates/desenho.html
+++ b/web/templates/desenho.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt">
   <head>
-    <title>Desenha</title>
+    <title>Vamos Desenhar !</title>
     <link rel="stylesheet" type="text/css" href="/css/desenho.css">
     <script type="text/javascript" src="/js/desenho.js"></script>
 
