feat: better sites

--- a/web/templates/desenho.html
+++ b/web/templates/desenho.html
@@ -8,9 +8,11 @@
 </head>
 
 <body style="background-color: #105f90;">
+        <h1 id="predicao" style="color:white;">Aguardando...</h1>
         <canvas id="canvas" name ="draw" style="background-color: white;"></canvas>
         <div>
-            <button id=enviar type="button" class="enviar" onclick="abc();">Enviar</button>
+            <button id=enviar type="button" class="enviar" onclick="submitDrawing();">Enviar</button>
         </div>
     </body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </html>
